bugfix: tried to remove the push to the left of the vertical scrollbar

--- a/src/wp-content/themes/azc/resources/assets/styles/scss/_global.scss
+++ b/src/wp-content/themes/azc/resources/assets/styles/scss/_global.scss
@@ -16,6 +16,7 @@ html {
   box-sizing: border-box;}
 body {
     font-family: arial, sans serif;
+    width: 100vw;
 }
 
 address {
