--- a/src/wp-content/themes/azc/style.css
+++ b/src/wp-content/themes/azc/style.css
@@ -13,7 +13,8 @@ html {
   box-sizing: border-box; }
 
 body {
-  font-family: arial, sans serif; }
+  font-family: arial, sans serif;
+  width: 100vw; }
 
 address {
   margin-bottom: inherit; }
